# TermuxLegacyBootstrap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
binary/bootstrap-archives/: README.txt
binary/noroot/: Termux.keystore  resignapk.txt
src/: termux-bootstrap-zip.S
